--- a/jeu1.html
+++ b/jeu1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-primary Barre_principale">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BIENVENUE</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,54 +53,6 @@
     </nav>
 
 
-      <div id="carouselExample" class="carousel slide Carrousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/minecraft.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/hades.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block bg-primary texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <img src="img/overwatch.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          
-          <div class="carousel-item">
-            <img src="img/tft.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the 4ème slide.</p>
-            </div>
-          </div>
-        </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
-
-
     <div class="container">
     <div class="row">
 
@@ -113,7 +65,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <a href="jeu1.html" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
             </div>
