--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Jeux vidéo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/5/solar/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-primary Barre_principale">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary barrePrincipale">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BIENVENUE</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +52,7 @@
     </nav>
 
 
-      <div id="carouselExample" class="carousel slide Carrousel">
+      <div id="carouselExample" class="carousel slide carrousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -63,31 +62,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/minecraft.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the first slide.</p>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="img/hades.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block bg-primary texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the second slide.</p>
-            </div>
           </div>
 
           <div class="carousel-item">
             <img src="img/overwatch.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the third slide.</p>
-            </div>
           </div>
-          
-          <div class="carousel-item">
+
+          <div class="carousel-item imgtft">
+            <img src="img/logo_tft.png" class="d-block logotft" alt="">
             <img src="img/tft.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block texte_carou">
-              <p class="pti_texte">Some representative placeholder content for the 4ème slide.</p>
-            </div>
           </div>
         </div>
+      </div>
 
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -104,61 +93,61 @@
     <div class="container">
     <div class="row">
 
-          <div class="card mb-3" style="max-width: 1000px;">
+          <div class="card mb-3" style="max-width: 1000vh;">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img src="img/minecraft.jpg" class="img-fluid rounded-start" alt="...">
+              <div class="col-md-4 petiteImage">
+                <img src="img/minecraft.jpg" class="img-fluid rounded-start " alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Minecraft</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <a href="jeu1.html" class="btn btn-primary">Go somewhere</a>
+                  <a href="jeu1.html" class="btn btn-primary">En savoir plus</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 1000px;">
+          <div class="card mb-3" style="max-width: 1000vh;">
             <div class="row g-0">
-              <div class="col-md-4">
+              <div class="col-md-4 petiteImage">
                 <img src="img/hades.jpg" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Hadès</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">En apprendre plus sur les enfers</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 1000px;">
+          <div class="card mb-3" style="max-width: 1000vh;">
             <div class="row g-0">
-              <div class="col-md-4">
+              <div class="col-md-4 petiteImage">
                 <img src="img/overwatch.jpg" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Overwatch 2</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Découvrir Overwatch 2</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 1000px;">
+          <div class="card mb-3" style="max-width: 1000vh">
             <div class="row g-0">
-              <div class="col-md-4">
+              <div class="col-md-4 petiteImage">
                 <img src="img/tft.jpg" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Teamfight Tactics</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Plongez dans le monde de TFT</a>
                 </div>
               </div>
             </div>
@@ -166,6 +155,7 @@
           
     </div>
     </div>
+
 
 
 
