--- a/index.html
+++ b/index.html
@@ -47,38 +47,44 @@
         </div>
     </nav>
 
+      <div class="container">
       <div class="intro">
         <h1 class="premierePhrase">Bienvenue sur Gameify, notre site de vente de jeux vidéo en ligne !</h1>
         <hr class="border border-primary opacity-100">
         <p>Notre plateforme a pour objectif de vous proposer un large choix de jeux vidéo, quels que soient vos goûts et vos préférences.</p>
         <p>Que vous soyez un joueur occasionnel ou un gamer passionné, découvrez sur notre site les dernières nouveautés ainsi que les classiques du jeu vidéo.</p>
       </div>
+      </div>
 
-      <div id="carouselExample" class="carousel slide carrousel">
+
+      <div class="container">
+        <div class="row">
+          <div id="carouselExample" class="carousel slide carrousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/minecraft.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img/hades.jpg" class="d-block w-100" alt="...">
-          </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/minecraft.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/hades.jpg" class="d-block w-100" alt="...">
+              </div>
 
-          <div class="carousel-item">
-            <img src="img/overwatch.jpg" class="d-block w-100" alt="...">
-          </div>
+              <div class="carousel-item">
+                <img src="img/overwatch.jpg" class="d-block w-100" alt="...">
+              </div>
 
-          <div class="carousel-item imgtft">
-            <img src="img/logo_tft.png" class="d-block logotft" alt="">
-            <img src="img/tft.jpg" class="d-block w-100" alt="...">
-          </div>
+              <div class="carousel-item imgtft">
+                <img src="img/logo_tft.png" class="d-block logotft" alt="">
+                <img src="img/tft.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>  
         </div>
-      </div>
 
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -89,6 +95,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
 
       <div class="container-fluid text-center bg-dark avisPoua">
         <div class="row">
@@ -119,10 +126,10 @@
 
           <div class="card mb-3 MinecraftJeu">
             <div class="row g-0">
-              <div class="col-md-4 petiteImage">
-                <img src="img/minecraft.jpg" class="img-fluid rounded-start " alt="...">
+              <div class="col-md-4">
+                <img src="img/minecraft.jpg" class="img-fluid rounded-start" alt="...">
                 <p class="text-light prixJeu">Prix : 19,99€</p>
-
+                
                 <p class="text-light noteRedaction">Note de la rédaction : 
                 <svg class="text-primary etoiles" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
