--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary barrePrincipale">
-        <div class="container-fluid">
-          <img src="img/logoSite.png" class="logoSite" alt="...">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Accueil
-                  <span class="visually-hidden">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Nous contacter</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Les jeux</a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Minecraft</a>
-                  <a class="dropdown-item" href="#">Hadès</a>
-                  <a class="dropdown-item" href="#">Overwatch 2</a>
-                  <a class="dropdown-item" href="#">Teamfight Tactics</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Prochainement ...</a>
-                </div>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-sm-2" type="search" placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary barrePrincipale">
+    <div class="container-fluid">
+      <img src="img/logoSite.png" class="logoSite" alt="...">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Accueil
+              <span class="visually-hidden">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Nous contacter</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Les jeux</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="jeuMinecraft.html">Minecraft</a>
+              <a class="dropdown-item" href="jeuHades.html">Hadès</a>
+              <a class="dropdown-item" href="jeuOverwatch.html">Overwatch 2</a>
+              <a class="dropdown-item" href="jeuTFT.html">Teamfight Tactics</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="">Prochainement ...</a>
+            </div>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-sm-2" type="search" placeholder="Search">
+          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
       <div class="container">
       <div class="intro">
