--- a/jeuMinecraft.html
+++ b/jeuMinecraft.html
@@ -20,22 +20,22 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Accueil
+                <a class="nav-link active" href="index.html">Accueil
                   <span class="visually-hidden">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Nous contacter</a>
+                <a class="nav-link" href="">Nous contacter</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Les jeux</a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Minecraft</a>
-                  <a class="dropdown-item" href="#">Hadès</a>
-                  <a class="dropdown-item" href="#">Overwatch 2</a>
-                  <a class="dropdown-item" href="#">Teamfight Tactics</a>
+                  <a class="dropdown-item" href="jeuMinecraft.html">Minecraft</a>
+                  <a class="dropdown-item" href="jeuHades.html">Hadès</a>
+                  <a class="dropdown-item" href="jeuOverwatch.html">Overwatch 2</a>
+                  <a class="dropdown-item" href="jeuTFT.html">Teamfight Tactics</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Prochainement ...</a>
+                  <a class="dropdown-item" href="">Prochainement ...</a>
                 </div>
               </li>
             </ul>
@@ -45,7 +45,7 @@
             </form>
           </div>
         </div>
-    </nav>
+      </nav>
 
     <div class="container-fluid p-0">
       <img src="img/bg_Minecraft.jpg" alt="Image pleine page" class="img-fluid w-100 opacity-50">
@@ -150,8 +150,8 @@
       </div>
     </div>
 
-    <div class="container-fluid text-center mt-5 avisPoua">
-      <div class="row">
+    <div class="container-fluid text-center mt-5 py-3 avisPoua">
+      <div class="row justify-content-center">
         <div class="grosTitre">Découvrez nos autres titres</div>
         <div class="col text-primary">
           <div class="card" style="width: 18rem;">
@@ -162,7 +162,7 @@
           </div>
         </div>
 
-        <div class="col text-primary texteAvis">
+        <div class="col text-primary">
           <div class="card" style="width: 18rem;">
             <img src="img/affiche_overwatch.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -171,7 +171,7 @@
           </div>
         </div>
         
-        <div class="col text-primary texteAvis">
+        <div class="col text-primary">
           <div class="card" style="width: 18rem;">
             <img src="img/affiche_tft.jpg" class="card-img-top" alt="...">
             <div class="card-body">
